test: fix jsons